--- a/WeatherDay/View/Controller/Search/SearchViewController.xib
+++ b/WeatherDay/View/Controller/Search/SearchViewController.xib
@@ -9,7 +9,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchViewController" customModule="WeatherDay" customModuleProvider="target">
             <connections>
-                <outlet property="tableView" destination="MVh-C3-uab" id="0Gg-KV-XYn"/>
+                <outlet property="historyTableView" destination="iB4-W5-ffd" id="7Gw-ih-YhR"/>
+                <outlet property="resultTableView" destination="MVh-C3-uab" id="0Gg-KV-XYn"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -18,18 +19,26 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MVh-C3-uab">
-                    <rect key="frame" x="10" y="44" width="404" height="818"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="MVh-C3-uab" userLabel="Result Table View">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </tableView>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="iB4-W5-ffd" userLabel="History Table View">
+                    <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
             </subviews>
             <color key="backgroundColor" red="0.11304876949999999" green="0.13294070960000001" blue="0.15791159869999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="MVh-C3-uab" secondAttribute="trailing" id="4Id-z6-sCa"/>
-                <constraint firstItem="MVh-C3-uab" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="10" id="Lby-UP-xwi"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="iB4-W5-ffd" secondAttribute="trailing" id="HYP-nq-KYM"/>
+                <constraint firstItem="MVh-C3-uab" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="Lby-UP-xwi"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="iB4-W5-ffd" secondAttribute="bottom" id="MWq-sf-pjg"/>
+                <constraint firstItem="iB4-W5-ffd" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="adK-xW-WVQ"/>
                 <constraint firstItem="MVh-C3-uab" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="cvM-eO-hHE"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="MVh-C3-uab" secondAttribute="bottom" id="eKG-3w-ir3"/>
+                <constraint firstItem="iB4-W5-ffd" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="mH5-d5-i1K"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <point key="canvasLocation" x="131.8840579710145" y="134.59821428571428"/>
