--- a/WeatherDay/View/Controller/Cell/2.WeatherDaily/DailyTableViewCell.xib
+++ b/WeatherDay/View/Controller/Cell/2.WeatherDaily/DailyTableViewCell.xib
@@ -10,74 +10,68 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="79" id="KGk-i7-Jjw" customClass="DailyTableViewCell" customModule="WeatherDay" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="360" height="79"/>
+            <rect key="frame" x="0.0" y="0.0" width="360" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="360" height="79"/>
+                <rect key="frame" x="0.0" y="0.0" width="360" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <visualEffectView opaque="NO" alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qob-43-0Wq">
-                        <rect key="frame" x="0.0" y="0.0" width="322" height="79"/>
-                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="8bi-8A-ryr">
-                            <rect key="frame" x="0.0" y="0.0" width="322" height="79"/>
+                    <visualEffectView opaque="NO" alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WIl-Aa-Ykj">
+                        <rect key="frame" x="0.0" y="0.0" width="360" height="60"/>
+                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="wPX-Fw-4Lr">
+                            <rect key="frame" x="0.0" y="0.0" width="360" height="60"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </view>
-                        <blurEffect style="extraLight"/>
+                        <blurEffect style="regular"/>
                     </visualEffectView>
-                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FTY-30-vvD">
-                        <rect key="frame" x="10" y="0.0" width="312" height="79"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ndV-2c-uNl">
-                                <rect key="frame" x="0.0" y="0.0" width="120" height="79"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="120" id="vfI-NT-pHu"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" verticalHuggingPriority="251" image="img_storm" translatesAutoresizingMaskIntoConstraints="NO" id="dan-RS-wC9">
-                                <rect key="frame" x="120" y="0.0" width="48" height="79"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="55" id="Q3R-r8-t9h"/>
-                                </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="th9-fh-bLI">
-                                <rect key="frame" x="168" y="0.0" width="48" height="79"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                                <color key="textColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ytJ-6A-SaW">
-                                <rect key="frame" x="216" y="0.0" width="48" height="79"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mby-wo-Ix3">
-                                <rect key="frame" x="264" y="0.0" width="48" height="79"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ndV-2c-uNl">
+                        <rect key="frame" x="8" y="20.5" width="112" height="19.5"/>
                         <constraints>
-                            <constraint firstItem="Mby-wo-Ix3" firstAttribute="width" secondItem="dan-RS-wC9" secondAttribute="width" id="kWw-Nh-F3Q"/>
-                            <constraint firstItem="ytJ-6A-SaW" firstAttribute="width" secondItem="dan-RS-wC9" secondAttribute="width" id="ouD-sZ-OQc"/>
-                            <constraint firstItem="th9-fh-bLI" firstAttribute="width" secondItem="dan-RS-wC9" secondAttribute="width" id="sdo-cA-t7p"/>
+                            <constraint firstAttribute="width" constant="112" id="t3A-Kn-7gN"/>
                         </constraints>
-                    </stackView>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" verticalHuggingPriority="251" image="img_storm" translatesAutoresizingMaskIntoConstraints="NO" id="dan-RS-wC9">
+                        <rect key="frame" x="128" y="6" width="48.5" height="48"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ytJ-6A-SaW">
+                        <rect key="frame" x="235" y="20.5" width="42.5" height="19.5"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="th9-fh-bLI">
+                        <rect key="frame" x="176.5" y="20.5" width="42.5" height="19.5"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                        <color key="textColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mby-wo-Ix3">
+                        <rect key="frame" x="301.5" y="20" width="42.5" height="20"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="FTY-30-vvD" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="BLu-wn-edH"/>
-                    <constraint firstItem="qob-43-0Wq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="BO1-4x-1Am"/>
-                    <constraint firstAttribute="bottom" secondItem="qob-43-0Wq" secondAttribute="bottom" id="Gzs-QN-YLo"/>
-                    <constraint firstAttribute="trailing" secondItem="FTY-30-vvD" secondAttribute="trailing" id="HiT-9s-IYv"/>
-                    <constraint firstItem="FTY-30-vvD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="NtB-JX-5GF"/>
-                    <constraint firstAttribute="bottom" secondItem="FTY-30-vvD" secondAttribute="bottom" id="T6f-Mq-oPQ"/>
-                    <constraint firstItem="qob-43-0Wq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="mWD-1w-pup"/>
-                    <constraint firstAttribute="trailing" secondItem="qob-43-0Wq" secondAttribute="trailing" id="uwi-ow-C6e"/>
+                    <constraint firstItem="th9-fh-bLI" firstAttribute="leading" secondItem="dan-RS-wC9" secondAttribute="trailing" id="72m-Bb-GHm"/>
+                    <constraint firstAttribute="bottom" secondItem="WIl-Aa-Ykj" secondAttribute="bottom" id="7jM-il-sHx"/>
+                    <constraint firstItem="Mby-wo-Ix3" firstAttribute="leading" secondItem="ytJ-6A-SaW" secondAttribute="trailing" constant="24" id="9sd-Zb-LLK"/>
+                    <constraint firstItem="ndV-2c-uNl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Inn-4F-cki"/>
+                    <constraint firstItem="Mby-wo-Ix3" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="SmY-cN-Ry6"/>
+                    <constraint firstItem="dan-RS-wC9" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Vcu-mF-rdL"/>
+                    <constraint firstItem="WIl-Aa-Ykj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="YGP-CI-YSz"/>
+                    <constraint firstItem="th9-fh-bLI" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="g8I-xM-oXR"/>
+                    <constraint firstItem="ytJ-6A-SaW" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="jfr-ta-1wI"/>
+                    <constraint firstItem="ytJ-6A-SaW" firstAttribute="leading" secondItem="th9-fh-bLI" secondAttribute="trailing" constant="16" id="llM-5C-Yb7"/>
+                    <constraint firstItem="ndV-2c-uNl" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="nUK-CD-L2k"/>
+                    <constraint firstAttribute="trailing" secondItem="WIl-Aa-Ykj" secondAttribute="trailing" id="nlf-ut-9IP"/>
+                    <constraint firstItem="dan-RS-wC9" firstAttribute="leading" secondItem="ndV-2c-uNl" secondAttribute="trailing" constant="8" id="oUc-ic-wew"/>
+                    <constraint firstAttribute="trailing" secondItem="Mby-wo-Ix3" secondAttribute="trailing" constant="16" id="oYd-sg-LZv"/>
+                    <constraint firstItem="WIl-Aa-Ykj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="tEj-Rj-276"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -95,7 +89,7 @@
                 <outlet property="temperatureMaxLabel" destination="Mby-wo-Ix3" id="rXJ-qn-MEN"/>
                 <outlet property="temperatureMinLabel" destination="ytJ-6A-SaW" id="dfm-xy-dbO"/>
             </connections>
-            <point key="canvasLocation" x="147.82608695652175" y="126.89732142857142"/>
+            <point key="canvasLocation" x="147.82608695652175" y="126.5625"/>
         </tableViewCell>
     </objects>
     <resources>
