--- a/WeatherDay/View/Controller/SideMenu/Cell/1.Locations/CellLocations/LocationsTableViewCell.xib
+++ b/WeatherDay/View/Controller/SideMenu/Cell/1.Locations/CellLocations/LocationsTableViewCell.xib
@@ -16,30 +16,44 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="62"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <visualEffectView opaque="NO" alpha="0.69999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6nU-bD-06K">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="62"/>
+                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="kEl-sK-YcB">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="62"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <color key="backgroundColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </view>
+                        <blurEffect style="regular"/>
+                    </visualEffectView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HBJ-f3-TuI">
-                        <rect key="frame" x="54" y="21.5" width="250" height="19.5"/>
-                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                        <rect key="frame" x="49" y="22" width="255" height="18"/>
+                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="awf-Kz-GdD">
-                        <rect key="frame" x="8" y="16.5" width="30" height="29"/>
+                        <rect key="frame" x="8" y="19" width="25" height="24"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="30" id="6Je-bj-UTT"/>
-                            <constraint firstAttribute="height" constant="30" id="cRB-Wg-Soj"/>
+                            <constraint firstAttribute="width" constant="25" id="6Je-bj-UTT"/>
+                            <constraint firstAttribute="height" constant="25" id="cRB-Wg-Soj"/>
                         </constraints>
                     </imageView>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="6nU-bD-06K" secondAttribute="bottom" id="2vO-vV-u15"/>
                     <constraint firstItem="HBJ-f3-TuI" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="9nu-gX-qWd"/>
                     <constraint firstItem="awf-Kz-GdD" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="EbJ-RR-BDR"/>
+                    <constraint firstItem="6nU-bD-06K" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Ih9-GQ-4fY"/>
                     <constraint firstAttribute="trailing" secondItem="HBJ-f3-TuI" secondAttribute="trailing" constant="16" id="LGw-42-ujV"/>
+                    <constraint firstAttribute="trailing" secondItem="6nU-bD-06K" secondAttribute="trailing" id="Xkb-IA-gXK"/>
+                    <constraint firstItem="6nU-bD-06K" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Ytb-Jz-O68"/>
                     <constraint firstItem="awf-Kz-GdD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="ijF-bU-EOn"/>
                     <constraint firstItem="HBJ-f3-TuI" firstAttribute="leading" secondItem="awf-Kz-GdD" secondAttribute="trailing" constant="16" id="mbf-yf-7wQ"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="locationNameLabel" destination="HBJ-f3-TuI" id="xUB-1o-5Rp"/>
