--- a/WeatherDay/View/Controller/SideMenu/Cell/2.Notifications/NotificationsTableViewCell.xib
+++ b/WeatherDay/View/Controller/SideMenu/Cell/2.Notifications/NotificationsTableViewCell.xib
@@ -16,6 +16,15 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <visualEffectView opaque="NO" alpha="0.69999999999999996" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rd6-RD-U3U">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="V6h-ST-AmZ">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </view>
+                        <blurEffect style="regular"/>
+                    </visualEffectView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_bell" translatesAutoresizingMaskIntoConstraints="NO" id="8nG-VB-wzH">
                         <rect key="frame" x="8" y="7" width="30" height="30"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -34,17 +43,22 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstItem="J3N-XX-poC" firstAttribute="leading" secondItem="8nG-VB-wzH" secondAttribute="trailing" constant="16" id="5CN-hk-2tU"/>
+                    <constraint firstItem="rd6-RD-U3U" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="6ky-67-hpH"/>
                     <constraint firstItem="8nG-VB-wzH" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Je4-eX-fpV"/>
                     <constraint firstAttribute="trailing" secondItem="J3N-XX-poC" secondAttribute="trailing" constant="16" id="X2A-UJ-oKZ"/>
                     <constraint firstItem="8nG-VB-wzH" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="eZf-eZ-KNn"/>
                     <constraint firstItem="J3N-XX-poC" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="fy0-bk-eTt"/>
+                    <constraint firstItem="rd6-RD-U3U" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="g0T-Eu-zks"/>
+                    <constraint firstAttribute="bottom" secondItem="rd6-RD-U3U" secondAttribute="bottom" id="pGx-Px-6Ee"/>
+                    <constraint firstAttribute="trailing" secondItem="rd6-RD-U3U" secondAttribute="trailing" id="qgz-ZH-KM3"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <point key="canvasLocation" x="132" y="96"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="img_bell" width="36" height="36"/>
+        <image name="img_bell" width="25" height="25"/>
     </resources>
 </document>
