--- a/WeatherDay/View/Controller/Cell/4.Map/MapTableViewCell.xib
+++ b/WeatherDay/View/Controller/Cell/4.Map/MapTableViewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="213"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <visualEffectView opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wQ5-6G-oTo">
+                    <visualEffectView opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wQ5-6G-oTo">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="213"/>
                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="JTO-Q0-AoM">
                             <rect key="frame" x="0.0" y="0.0" width="320" height="213"/>
