--- a/WeatherDay/View/Controller/Cell/1.EveryHours/CellforEveryHours/EveryHoursCollectionViewCell.xib
+++ b/WeatherDay/View/Controller/Cell/1.EveryHours/CellforEveryHours/EveryHoursCollectionViewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="96" height="195"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <visualEffectView opaque="NO" alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="06t-Bu-BcB">
+                    <visualEffectView opaque="NO" alpha="0.5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="06t-Bu-BcB">
                         <rect key="frame" x="0.0" y="0.0" width="96" height="195"/>
                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="d3w-33-ifj">
                             <rect key="frame" x="0.0" y="0.0" width="96" height="195"/>
@@ -26,15 +26,15 @@
                         <blurEffect style="regular"/>
                     </visualEffectView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OFC-h0-eIk">
-                        <rect key="frame" x="27.5" y="39" width="41.5" height="18"/>
+                        <rect key="frame" x="27.5" y="46" width="41.5" height="18"/>
                         <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
                         <color key="textColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_rain" translatesAutoresizingMaskIntoConstraints="NO" id="hur-qJ-o6y">
-                        <rect key="frame" x="28" y="72" width="40" height="47"/>
+                        <rect key="frame" x="28" y="79" width="40" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="47" id="d10-Ds-Cok"/>
+                            <constraint firstAttribute="height" constant="40" id="d10-Ds-Cok"/>
                             <constraint firstAttribute="width" constant="40" id="gTw-LM-EnO"/>
                         </constraints>
                     </imageView>
