Commit search in Vietnam and search in The World

--- a/WeatherDay/View/Controller/Cell/2.WeatherDaily/DailyTableViewCell.xib
+++ b/WeatherDay/View/Controller/Cell/2.WeatherDaily/DailyTableViewCell.xib
@@ -35,22 +35,28 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" verticalHuggingPriority="251" image="img_storm" translatesAutoresizingMaskIntoConstraints="NO" id="dan-RS-wC9">
-                        <rect key="frame" x="128" y="6" width="48.5" height="48"/>
+                        <rect key="frame" x="128" y="6" width="67.5" height="48"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ytJ-6A-SaW">
-                        <rect key="frame" x="235" y="20.5" width="42.5" height="19.5"/>
+                        <rect key="frame" x="254" y="20.5" width="40" height="19.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="w5d-Af-4wV"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="th9-fh-bLI">
-                        <rect key="frame" x="176.5" y="20.5" width="42.5" height="19.5"/>
+                        <rect key="frame" x="195.5" y="20.5" width="42.5" height="19.5"/>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                         <color key="textColor" systemColor="systemTealColor" red="0.35294117650000001" green="0.7843137255" blue="0.98039215690000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mby-wo-Ix3">
-                        <rect key="frame" x="301.5" y="20" width="42.5" height="20"/>
+                        <rect key="frame" x="308" y="20" width="40" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="40" id="xw9-Ba-4xQ"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -59,7 +65,8 @@
                 <constraints>
                     <constraint firstItem="th9-fh-bLI" firstAttribute="leading" secondItem="dan-RS-wC9" secondAttribute="trailing" id="72m-Bb-GHm"/>
                     <constraint firstAttribute="bottom" secondItem="WIl-Aa-Ykj" secondAttribute="bottom" id="7jM-il-sHx"/>
-                    <constraint firstItem="Mby-wo-Ix3" firstAttribute="leading" secondItem="ytJ-6A-SaW" secondAttribute="trailing" constant="24" id="9sd-Zb-LLK"/>
+                    <constraint firstItem="Mby-wo-Ix3" firstAttribute="leading" secondItem="ytJ-6A-SaW" secondAttribute="trailing" constant="14" id="9sd-Zb-LLK"/>
+                    <constraint firstAttribute="trailing" secondItem="Mby-wo-Ix3" secondAttribute="trailing" constant="12" id="B92-b8-LDR"/>
                     <constraint firstItem="ndV-2c-uNl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Inn-4F-cki"/>
                     <constraint firstItem="Mby-wo-Ix3" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="SmY-cN-Ry6"/>
                     <constraint firstItem="dan-RS-wC9" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Vcu-mF-rdL"/>
@@ -70,7 +77,6 @@
                     <constraint firstItem="ndV-2c-uNl" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="nUK-CD-L2k"/>
                     <constraint firstAttribute="trailing" secondItem="WIl-Aa-Ykj" secondAttribute="trailing" id="nlf-ut-9IP"/>
                     <constraint firstItem="dan-RS-wC9" firstAttribute="leading" secondItem="ndV-2c-uNl" secondAttribute="trailing" constant="8" id="oUc-ic-wew"/>
-                    <constraint firstAttribute="trailing" secondItem="Mby-wo-Ix3" secondAttribute="trailing" constant="16" id="oYd-sg-LZv"/>
                     <constraint firstItem="WIl-Aa-Ykj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="tEj-Rj-276"/>
                 </constraints>
             </tableViewCellContentView>
